package it.unicam.cs.ids.hackhub.entity;

// Stato di PropostaCall: enum semplice (NON pattern State).
public enum StatoCall {
    Proposta,
    Accettata,
    Rifiutata
}
