package it.unicam.cs.ids.hackhub.observer;

// Pattern Observer (iter.3): marker del payload notificabile. Generalizza cio' che
// il Subject trasporta agli Observer, cosi' lo stesso meccanismo di iter.2 (inviti)
// e' riusato per il mentoring. Realizzato da Invito (iter.2), RichiestaSupporto e
// PropostaCall (iter.3).
public interface Notifica {
}
